feat: add translations for report status in en.yml and pt.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,7 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  report_status:
+    pending: "Pending"
+    approved: "Approved"
+    rejected: "Rejected"
